--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+APP_DEBUG=true
+APP_PORT=3000
+APP_ACCESS_SECRET_KEY=hahaha
+APP_REFRESH_SECRET_KEY=xixixi
+
 # This was inserted by `prisma init`:
 
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -8,4 +13,4 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=
+DATABASE_URL=""
