--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "to-do-list-nestjs",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "To-Do List Rest API built with NestJS",
   "author": "Richo Andika",
   "private": true,
   "license": "MIT",
   "keywords": [
+    "fastify",
     "nestjs",
     "prisma",
     "typescript"
@@ -41,13 +42,19 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.4.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-fastify": "^8.4.0",
-    "@prisma/client": "^3.10.0",
+    "@prisma/client": "^3.11.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "nestjs-prisma": "^0.15.1",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -57,9 +64,10 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -70,6 +78,7 @@
     "prettier": "^2.3.2",
     "prettier-plugin-prisma": "^3.10.0",
     "prisma": "^3.10.0",
+    "prisma-dbml-generator": "^0.8.3",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
